--- a/main.ipynb
+++ b/main.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "9aaa1118",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import re\n",
-    "import tensorflow as tf "
+    "import tensorflow as tf \n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer"
    ]
   },
   {
@@ -73,9 +74,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "587ef886",
+   "metadata": {},
+   "source": [
+    "### Tokenizing the text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a434b9ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts([text])\n",
+    "total_words = len(tokenizer.word_index) + 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a434b9ff",
+   "id": "3675c621",
    "metadata": {},
    "outputs": [],
    "source": []
