--- a/main.ipynb
+++ b/main.ipynb
@@ -94,9 +94,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53bdd4d8",
+   "metadata": {},
+   "source": [
+    "### Creating input sequences for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3675c621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = text.split(\".\")\n",
+    "input_sequences = []\n",
+    "for line in sentences:\n",
+    "    token_list = tokenizer.texts_to_sequences([line])[0]\n",
+    "    for i in range(1, len(token_list)):\n",
+    "        input_sequences.append(token_list[:i+1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3675c621",
+   "id": "18416229",
    "metadata": {},
    "outputs": [],
    "source": []
