Padding the sequences to uniform length

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "9aaa1118",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "import numpy as np\n",
     "import re\n",
     "import tensorflow as tf \n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer"
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
@@ -117,9 +118,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4577d186",
+   "metadata": {},
+   "source": [
+    "### Padding the sequences to uniform length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "18416229",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_sequence_len = max(len(seq) for seq in input_sequences)\n",
+    "input_sequences  = np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18416229",
+   "id": "64983b72",
    "metadata": {},
    "outputs": [],
    "source": []
