Building the LSTM model

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "9aaa1118",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,9 @@
     "import tensorflow as tf \n",
     "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense"
    ]
   },
   {
@@ -157,9 +159,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6602fb06",
+   "metadata": {},
+   "source": [
+    "### Building and training the LSTM model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f6f7ac81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Embedding(total_words, 100, input_length=max_sequence_len-1))\n",
+    "model.add(LSTM(150))\n",
+    "model.add(Dense(total_words, activation='softmax'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6f7ac81",
+   "id": "4749c838",
    "metadata": {},
    "outputs": [],
    "source": []
