Save the model and tokenizer

--- a/main.ipynb
+++ b/main.ipynb
@@ -521,6 +521,45 @@
    "source": [
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea71791b",
+   "metadata": {},
+   "source": [
+    "### Save the model and tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9e287c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"next_word_lstm_model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "282f62ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"tokenizer.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(tokenizer, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac07aa6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
