Predicting the next n words for a given seed text

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "9aaa1118",
    "metadata": {},
    "outputs": [],
@@ -18,10 +18,11 @@
     "import numpy as np\n",
     "import re\n",
     "import tensorflow as tf \n",
+    "import pickle\n",
     "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.models import Sequential, load_model\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense"
    ]
   },
@@ -537,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"next_word_lstm_model.h5\")"
+    "# model.save(\"next_word_lstm_model.h5\")"
    ]
   },
   {
@@ -547,16 +548,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
-    "with open(\"tokenizer.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(tokenizer, f)"
+    "# with open(\"tokenizer.pkl\", \"wb\") as f:\n",
+    "#     pickle.dump(tokenizer, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71f87deb",
+   "metadata": {},
+   "source": [
+    "### Load the model and tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4ac07aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_model(\"next_word_lstm_model.h5\")\n",
+    "tokenizer = pickle.load(open(\"tokenizer.pkl\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37673622",
+   "metadata": {},
+   "source": [
+    "### Predicting the next n words for a given seed text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f413a5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_next_n_words(seed_text, next_words):\n",
+    "    for _ in range(next_words):\n",
+    "        token_list = tokenizer.texts_to_sequences([seed_text])[0]\n",
+    "        token_list = pad_sequences([token_list], maxlen=max_sequence_len-1, padding='pre')\n",
+    "        \n",
+    "        predicted = model.predict(token_list, verbose=0)\n",
+    "        predicted = np.argmax(predicted, axis=-1)[0] \n",
+    "        \n",
+    "        output_word = tokenizer.index_word[predicted]\n",
+    "        seed_text += \" \" + output_word\n",
+    "    \n",
+    "    return seed_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9803a987",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The master is a person of an excellent disposition\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_text = \"The master is\"\n",
+    "print(predict_next_n_words(seed_text, 6))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac07aa6",
+   "id": "e6ab1c11",
    "metadata": {},
    "outputs": [],
    "source": []
