Generating test data from the text file

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "9aaa1118",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,8 @@
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
-    "from tensorflow.keras.layers import Embedding, LSTM, Dense"
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
+    "from rouge_score import rouge_scorer"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "5486f1fc",
    "metadata": {},
    "outputs": [],
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "4ac07aa6",
    "metadata": {},
    "outputs": [
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "f413a5e6",
    "metadata": {},
    "outputs": [],
@@ -610,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "9803a987",
    "metadata": {},
    "outputs": [
@@ -628,9 +629,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3d187de",
+   "metadata": {},
+   "source": [
+    "### Generating test data from the text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e6ab1c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = text.split('\\n')\n",
+    "\n",
+    "test_sentences = [s.strip() for s in sentences[-6:] if len(s.strip()) > 0]  # Select last 6 sentences for evaluation\n",
+    "reference_sentences = [\" \".join(test_sentences[i].split()[:10]) for i in range(len(test_sentences))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6d9a6f11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This website includes information about Project Gutenberg™, including how to make donations',\n",
+       " 'including how to make donations to the Project Gutenberg Literary archive foundation at the country',\n",
+       " 'Archive Foundation, how to help produce our new eBooks, and ever are to be base',\n",
+       " 'subscribe to our email newsletter to hear about new eBooks. to world until which of']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = [predict_next_n_words(sentence, 5) for sentence in reference_sentences]\n",
+    "predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6ab1c11",
+   "id": "ae91b87b",
    "metadata": {},
    "outputs": [],
    "source": []
