Evaluating the model with ROUGE scores

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "9aaa1118",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,8 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
-    "from rouge_score import rouge_scorer"
+    "from rouge_score import rouge_scorer\n",
+    "from rouge import Rouge"
    ]
   },
   {
@@ -675,9 +676,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11f9e9af",
+   "metadata": {},
+   "source": [
+    "### Evaluating the model with ROUGE scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ae91b87b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rouge-1': {'r': 1.0, 'p': 0.6705586080586081, 'f': 0.8016347639439639},\n",
+       " 'rouge-2': {'r': 1.0, 'p': 0.6185064935064934, 'f': 0.7634271052597773},\n",
+       " 'rouge-l': {'r': 1.0, 'p': 0.6705586080586081, 'f': 0.8016347639439639}}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rouge = Rouge()\n",
+    "scores = rouge.get_scores(predictions, reference_sentences, avg=True)\n",
+    "\n",
+    "scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae91b87b",
+   "id": "7d6009d7",
    "metadata": {},
    "outputs": [],
    "source": []
